suite/tests/switch/invalid/dup-case.c
int main(void)
{
    switch (0) {
	case 1:
	case 1:
	    return 1;
    }
}
